src/test/deca/context/valid/Class12.deca
// Description:
//    Definition de class + plusieurs manipulations avec class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022

class A{
    int a;
    void seta(int a){
        a=a;
    }
}

{
    A FIRST=new A();
    FIRST.seta(5);
}