src/test/deca/context/invalid/classmethode14.deca
class A {
	void methode(int k,int n) {
        int a=k;
        
	}
}

{
    A a=new A();
    a.methode(52,81,99);
    
}